[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-qa"
version = "0.1.0"
description = "LangChain agent that generates Playwright instructions"
requires-python = ">=3.10"
authors = [
  {name = "AI QA Bot"}
]
dependencies = [
  "langchain>=0.1.0",
  "langgraph>=0.0.52",
  "langchain-gigachat>=0.1.0",
  "playwright>=1.40.0"
]

[tool.setuptools.packages.find]
where = ["src"]
